[build-system]
requires = ["hatchling>=1.18.0", "torch==2.6.0"]
build-backend = "hatchling.build"

[project]
name = "happy"
version = "0.0.1"
authors = [
    {name = "Claudia Vanea"}
]
description = "The Histology Analysis Pipeline.py (HAPPY)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyg-library>=0.2.0",
    "python-javabridge>=4.0.4",
    "pyvips>=2.2.3",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "typer>=0.15.2",
    "peewee>=3.17.9",
    "scikit-image>=0.25.2",
    "opencv-python>=4.11.0.86",
    "python-bioformats>=1.5.0",
    "albumentations==1.3.0",
    "openslide-python>=1.4.1",
    "umap-learn>=0.5.7",
    "visdom>=0.2.4",
    "seaborn>=0.13.2",
    "pytest>=8.3.5",
    "pandas>=2.2.3",
    "matplotlib>=3.10.1",
    "h5py==3.7.0",
    "torch-cluster>=1.6.3",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torch-spline-conv>=1.2.2",
]

[project.urls]
"Homepage" = "https://github.com/Nellaker-group/happy"

[project.scripts]
cell_infer = "cell_inference:main"
nuc_train = "nuc_train:main"
cell_train = "cell_train:main"

[tool.hatch.build.targets.wheel]
packages = ["happy"] 
